--- a/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
@@ -70,6 +70,8 @@
     </form>
 </div>
 
+<div id="common-notice-dialog" class="hide"></div>
+
 <script src="static/js/utils.js">
 </script>
 <script src="static/js/dialog_common.js">
