--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -79,6 +79,8 @@
 <div id="approve-detail-dialog" class="hide"></div>
 <div id="approve-msg-dialog" class="hide"></div>
 
+<div id="common-notice-dialog" class="hide"></div>
+
 <script src="static/js/utils.js">
 </script>
 <script src="static/js/dialog_common.js">
@@ -106,14 +108,14 @@
             $(ex).dataTable().fnDestroy();
         }
         var aoColumns = [
-            {"sTitle": 'ID', "sClass": "center"},
-            {"sTitle": '申请人', "sClass": "center"},
-            {"sTitle": '申请部门', "sWidth": "120px", "sClass": "center"},
-            {"sTitle": '申请时间', "sClass": "center"},
-            {"sTitle": '处理时间', "sClass": "center"},
-            {"sTitle": '金额', "sClass": "center"},
-            {"sTitle": "报销详情", "sClass": "center"},
-            {"sTitle": "动作", "sClass": "center"}]
+            {"sTitle": 'ID', "sClass": "center", "sWidth": 100},
+            {"sTitle": '申请人', "sClass": "center", "sWidth": 200},
+            {"sTitle": '申请部门', "sWidth": 300, "sClass": "center"},
+            {"sTitle": '申请时间', "sClass": "center", "sWidth": 200},
+            {"sTitle": '处理时间', "sClass": "center", "sWidth": 200},
+            {"sTitle": '金额', "sClass": "center", "sWidth": 150},
+            {"sTitle": "报销详情", "sClass": "center", "sWidth": 150},
+            {"sTitle": "动作", "sClass": "center", "sWidth": 200}]
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
         var oTable = $(ex).dataTable({
@@ -156,6 +158,7 @@
                 if (approveUser != '') {
                     vars["approveUser"] = approveUser;
                 }
+                vars["userId"] = "zhen.pei";
                 var params = {};
                 params["vars"] = vars;
                 params["tableMap"] = {};
@@ -166,16 +169,21 @@
                     "url": url,
                     "data": JSON.stringify(params),
                     "success": function (resp) {
-                        var data = resp.data;
-                        var iTotalRecords = data.count || 0;
-                        var iTotalDisplayRecords = iTotalRecords;
-                        var aaData = showTableInfo(data);
-                        data = {
-                            "aaData": aaData,
-                            "iTotalRecords": (iTotalRecords || 0),
-                            "iTotalDisplayRecords": (iTotalDisplayRecords || 0)
-                        };
-                        fnCallback(data);
+                        if (resp.errorCode == 0) {
+                            var data = resp.data;
+                            var iTotalRecords = data.count || 0;
+                            var iTotalDisplayRecords = iTotalRecords;
+                            var aaData = showTableInfo(data);
+                            data = {
+                                "aaData": aaData,
+                                "iTotalRecords": (iTotalRecords || 0),
+                                "iTotalDisplayRecords": (iTotalDisplayRecords || 0)
+                            };
+                            fnCallback(data);
+                        } else {
+                            showCommonNoticeDialog('失败', 'icon-warning-sign',
+                                    generateNoticeMsg(resp.errorMessage), 300);
+                        }
                     },
                     error: function () {
                         showCommonNoticeDialog('网络错误', 'icon-bolt', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
@@ -266,11 +274,8 @@
                         try {
                             var details = resp.data;
                             var html = '';
-                            html += __generateDetailHtml('当前审批状态', 'icon-eye-open', ["审批完成"]);
-                            var len1 = details.length;
-                            for (var i = 0; i < len1; i++) {
-                                html += __generateDetailHtml('审批历史', 'icon-book', details[i]);
-                            }
+                            html += __generateDetailHtml('当前审批状态', 'icon-eye-open', ["审批完成"], true);
+                            html += __generateDetailHtml('审批历史', 'icon-book', details, true);
                             $("#history-approve-details-list").html(html);
                         } catch (e) {
                         }
@@ -300,10 +305,10 @@
         });
     }
 
-    function restartForm(id){
+    function restartForm(id) {
         console.log(id);
         var params = {};
-        params["vars"] = {"formId":id};
+        params["vars"] = {"formId": id};
         params["tableMap"] = {};
         params["flag"] = "";
         $.ajax({
