--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -139,12 +139,12 @@
                 'type="checkbox" value="ALL" class="ace"><span class="lbl"></span></label>',
                 "bSortable": false, "sClass": "center"
             },
-            {"sTitle": 'ID', "sClass": "center" ,"sWidth": 100},
-            {"sTitle": '申请人', "sClass": "center" ,"sWidth": 200},
+            {"sTitle": 'ID', "sClass": "center", "sWidth": 100},
+            {"sTitle": '申请人', "sClass": "center", "sWidth": 200},
             {"sTitle": '申请部门', "sWidth": 300, "sClass": "center"},
-            {"sTitle": '申请时间', "sClass": "center" ,"sWidth": 200},
-            {"sTitle": '金额', "sClass": "center" ,"sWidth": 150},
-            {"sTitle": "报销详情", "sClass": "center" ,"sWidth": 200},
+            {"sTitle": '申请时间', "sClass": "center", "sWidth": 200},
+            {"sTitle": '金额', "sClass": "center", "sWidth": 150},
+            {"sTitle": "报销详情", "sClass": "center", "sWidth": 200},
             {"sTitle": 'taskId', "sClass": "center", "bVisible": true}];
 
         var wh = $(window).height();
@@ -201,16 +201,22 @@
                     "url": url,
                     "data": JSON.stringify(params),
                     "success": function (resp) {
-                        var data = resp.data;
-                        var iTotalRecords = data.count || 0;
-                        var iTotalDisplayRecords = iTotalRecords;
-                        var aaData = showTableInfo(data);
-                        data = {
-                            "aaData": aaData,
-                            "iTotalRecords": (iTotalRecords || 0),
-                            "iTotalDisplayRecords": (iTotalDisplayRecords || 0)
-                        };
-                        fnCallback(data);
+                        if (resp.errorCode == 0) {
+                            var data = resp.data;
+                            var iTotalRecords = data.count || 0;
+                            var iTotalDisplayRecords = iTotalRecords;
+                            var aaData = showTableInfo(data);
+                            data = {
+                                "aaData": aaData,
+                                "iTotalRecords": (iTotalRecords || 0),
+                                "iTotalDisplayRecords": (iTotalDisplayRecords || 0)
+                            };
+                            fnCallback(data);
+                        }
+                        else {
+                            showCommonNoticeDialog('失败', 'icon-warning-sign',
+                                    generateNoticeMsg(resp.errorMessage), 300);
+                        }
                     },
                     error: function () {
                         showCommonNoticeDialog('网络错误', 'icon-bolt', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
