--- a/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
@@ -23,9 +23,6 @@
             <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()" placeholder="申请日期..."/>
             <i class="icon-calendar green"></i>
         </span>
-        <span class="input-icon input-icon-right">
-            <input id="approve-user" type="text" placeholder="申请人..." style="width: 100px"/>
-        </span>
         <button id="search"
                 style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
                 class="btn btn-minier btn-primary">
@@ -39,7 +36,7 @@
         <div class="col-xs-9">
             <div class="widget-box">
                 <div class="widget-header header-color-blue" style="">
-                    <h5 class="bigger lighter"><i class="icon-time"></i>当前审批</h5>
+                    <h5 class="bigger lighter"><i class="icon-time"></i>已经结束的申请</h5>
                 </div>
                 <div class="widget-body">
                     <table id="apply_history"
