--- a/src/main/webapp/WEB-INF/vm/oa/apply_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_todo.vm
@@ -24,9 +24,6 @@
                    placeholder="申请日期..."/>
             <i class="icon-calendar green"></i>
         </span>
-        <span class="input-icon input-icon-right">
-            <input id="approve-user" type="text" placeholder="申请人..." style="width: 100px"/>
-        </span>
         <button id="search"
                 style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
                 class="btn btn-minier btn-primary">
@@ -40,7 +37,7 @@
         <div class="col-xs-9">
             <div class="widget-box">
                 <div class="widget-header header-color-blue" style="">
-                    <h5 class="bigger lighter"><i class="icon-time"></i>当前审批</h5>
+                    <h5 class="bigger lighter"><i class="icon-time"></i>正在审批的申请</h5>
                 </div>
                 <div class="widget-body">
                     <table id="apply_todo"
