--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -145,7 +145,7 @@
             {"sTitle": '申请时间', "sClass": "center", "sWidth": 200},
             {"sTitle": '金额', "sClass": "center", "sWidth": 150},
             {"sTitle": "报销详情", "sClass": "center", "sWidth": 200},
-            {"sTitle": 'taskId', "sClass": "center", "bVisible": true}];
+            {"sTitle": 'taskId', "sClass": "center", "bVisible": false}];
 
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
@@ -190,7 +190,7 @@
                 if (approveUser != '') {
                     vars["approveUser"] = approveUser;
                 }
-                vars["userId"] = "zhenqing.wang";
+                vars["userId"] = "bin.sun";
                 var params = {};
                 params["vars"] = vars;
                 params["tableMap"] = {};
@@ -205,7 +205,7 @@
                             var data = resp.data;
                             var iTotalRecords = data.count || 0;
                             var iTotalDisplayRecords = iTotalRecords;
-                            var aaData = showTableInfo(data);
+                            var aaData = showTableInfo(data, aoColumns.length);
                             data = {
                                 "aaData": aaData,
                                 "iTotalRecords": (iTotalRecords || 0),
@@ -560,11 +560,14 @@
 //            enableCurrentApproveToolbarButton(false);
         var formIds = new Array();
         var taskIds = new Array();
+        console.log(oTable.fnGetData());
         $("input:checked", oTable.fnGetNodes()).each(function () {
             var row = $(this).parent().parent().parent();
             var nTds = $('td', row);
+            console.log(nTds);
             var formId = nTds[1].childNodes[0].data;
             var taskId = nTds[7].childNodes[0].data;
+            console.log(taskId);
             formIds += formId + ",";
             taskIds += taskId + ",";
         });
@@ -581,7 +584,7 @@
         vars["taskIds"] = taskIds;
         vars["memo"] = msg
         vars["rtx_id"] = rtx_id;
-        vars["userId"] = "zhenqing.wang";
+        vars["userId"] = "bin.sun";
         params["vars"] = vars;
         params["tableMap"] = {};
         params["flag"] = "";
@@ -728,7 +731,7 @@
         }
     }
 
-    function showTableInfo(data) {
+    function showTableInfo(data, len) {
         var aaData = [];
         var needData = data.tableInfos;
         var tableMapList = data.tableMapList;
@@ -742,8 +745,14 @@
             var map = $.parseStr("<a href='javascript:void(0);' " +
             "onclick='showEditDialog(%s,%s);'><i class='icon-link'></i></a>", tempMap, tempVar);
             var checkbox = '<label><input value="" type="checkbox" class="ace"> <span class="lbl"></span></label>';
-            aaData.push([checkbox, needData[i][0], needData[i][1], needData[i][2], needData[i][3], money.toFixed(2), map, needData[i][5]]);
+            var need_list = [checkbox, needData[i][0], needData[i][1], needData[i][2], needData[i][3], money.toFixed(2), map, needData[i][5]];
+            var d_list = [];
+            for(var i = 0; i < len; i++){
+                d_list.push(need_list[i]);
+            }
+            aaData.push(d_list);
         }
+        alert(aaData);
         return aaData;
     }
 
