--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -144,8 +144,8 @@
             {"sTitle": '申请部门', "sWidth": 300, "sClass": "center"},
             {"sTitle": '申请时间', "sClass": "center", "sWidth": 200},
             {"sTitle": '金额', "sClass": "center", "sWidth": 150},
-            {"sTitle": "报销详情", "sClass": "center", "sWidth": 200},
-            {"sTitle": '任务ID', "sClass": "center", "bVisible": true}];
+            {"sTitle": "报销详情", "sClass": "center", "sWidth": 150},
+            {"sTitle": '任务ID', "sClass": "center", "sWidth": 150, "bVisible": true}];
 
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
