--- a/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/oa_layout.vm
@@ -96,7 +96,7 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0);">
                     <span class="menu-text"> 我的申请 </span>
                 </a>
                 <ul class="submenu" style="display:block">
@@ -116,7 +116,7 @@
                 </ul>
             </li>
             <li>
-                <a href="javascript:void(0)">
+                <a href="javascript:void(0);">
                     <span class="menu-text"> 我的审批 </span>
                 </a>
                 <ul class="submenu" style="display:block">
