--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -75,7 +75,7 @@
             <table style="border-collapse:collapse;" border="1" class="col-xs-9">
                 <tr>
                     <td>报销金额总计</td>
-                    <td><input type="text" value="0" id="sum" readonly="readonly"></td>
+                    <td><input type="text" value="0.00" id="sum" readonly="readonly"></td>
                 </tr>
             </table>
         </div>
@@ -121,7 +121,7 @@
             <table style="border-collapse:collapse;" border="1" class="col-xs-9">
                 <tr>
                     <td>金额总计</td>
-                    <td><input type="text" value="0" id="sum1" readonly="readonly"></td>
+                    <td><input type="text" value="0.00" id="sum1" readonly="readonly"></td>
                 </tr>
             </table>
         </div>
@@ -135,7 +135,7 @@
                    id="table6">
                 <tr>
                     <td>金额</td>
-                    <td><input type="text" value="0" id="sum6" onblur="addMoney('table6')"></td>
+                    <td><input type="text" value="0.00" id="sum6" onblur="addMoney('table6')"></td>
                     <td>备注(话费实际发生月份)</td>
                     <td><input type="text" id="remark"></td>
                 </tr>
@@ -181,7 +181,7 @@
             <table style="border-collapse:collapse;" border="1" class="col-xs-9">
                 <tr>
                     <td>金额总计</td>
-                    <td><input type="text" value="0" id="sum2" readonly="readonly"></td>
+                    <td><input type="text" value="0.00" id="sum2" readonly="readonly"></td>
                 </tr>
             </table>
         </div>
@@ -223,7 +223,7 @@
             <table style="border-collapse:collapse;" border="1" class="col-xs-9">
                 <tr>
                     <td>金额总计</td>
-                    <td><input type="text" value="0" id="sum3" readonly="readonly"></td>
+                    <td><input type="text" value="0.00" id="sum3" readonly="readonly"></td>
                 </tr>
             </table>
         </div>
@@ -260,7 +260,7 @@
             <table style="border-collapse:collapse;" border="1" class="col-xs-9">
                 <tr>
                     <td>金额总计</td>
-                    <td><input type="text" value="0" id="sum4" readonly="readonly"></td>
+                    <td><input type="text" value="0.00" id="sum4" readonly="readonly"></td>
                 </tr>
             </table>
         </div>
@@ -289,7 +289,7 @@
             <table style="border-collapse:collapse;" border="1" class="col-xs-9">
                 <tr>
                     <td>金额总计</td>
-                    <td><input type="text" value="0" id="sum5" readonly="readonly"></td>
+                    <td><input type="text" value="0.00" id="sum5" readonly="readonly"></td>
                 </tr>
             </table>
         </div>
@@ -322,7 +322,35 @@
 <script src="/oaengine/static/My97DatePicker/WdatePicker.js"></script>
 <script language=JavaScript>
 
+
+
     jQuery(function ($) {
+        var url = location.search;
+        if (url.indexOf('formId') != -1) {
+            createEditApplyTable();
+            var table = document.getElementById('table1');
+            table.deleteRow(1);
+        } else {
+            createNewAddApplyTable();
+
+        }
+
+    });
+
+    function showTime() {
+        WdatePicker({dateFmt: 'yyyy-MM-dd'});
+    }
+
+    function showTimeAndLabor(tableId, curRow) {
+        WdatePicker({
+            dateFmt: 'yyyy-MM-dd', maxDate: '%y-%M-%d', onpicked: function () {
+                workHour(tableId, curRow)
+            }
+        });
+    }
+
+//  新建表
+    function createNewAddApplyTable() {
         $.ajax({
             contentType: "application/json; charset=utf-8",
             dataType: 'json',
@@ -351,20 +379,48 @@
                 showCommonNoticeDialog('网络错误', 'icon-bolt',
                         generateNoticeMsg('网络错误，请刷新后重试!'), 300);
             }
-        })
-    });
-
-    function showTime() {
-        WdatePicker({dateFmt: 'yyyy-MM-dd'});
+        });
     }
 
-    function showTimeAndLabor(tableId, curRow) {
-        WdatePicker({
-            dateFmt: 'yyyy-MM-dd', maxDate: '%y-%M-%d', onpicked: function () {
-                workHour(tableId, curRow)
+    function createEditApplyTable(formId) {
+        var vars = {};
+        vars["formId"] = formId;
+        var params = {};
+        params["vars"] = vars;
+        params["tableMap"] = {};
+        params["flag"] = "";
+        $.ajax({
+            contentType: "application/json; charset=utf-8",
+            dataType: 'json',
+            url: "oa/edit_apply",
+            type: "POST",
+            data: JSON.stringify(params),
+            success: function (resp) {
+                if (resp.errorCode == 0) {
+                    var data = resp.data;
+                    var table = document.getElementById("table");
+                    var k = 0;
+                    for (var i = 0; i < 2; i++) {
+                        for (var j = 1; j < 6; j += 2) {
+                            if (k >= 5) {
+                                break;
+                            }
+                            table.rows[i].cells[j].childNodes[0].value = data[k];
+                            k++;
+                        }
+                    }
+                } else {
+                    showCommonNoticeDialog('失败', 'icon-warning-sign',
+                            generateNoticeMsg(resp.errorMessage), 300);
+                }
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                showCommonNoticeDialog('网络错误', 'icon-bolt',
+                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
             }
         });
     }
+
 
     function workHour(tableId, curRow) {
         var table = document.getElementById(tableId);
