--- a/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
@@ -13,25 +13,28 @@
 
 
 </style>
-<div class="col-xs-12">
-    <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
-        <span class="input-icon input-icon-right">
-            <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()" placeholder="申请日期..."/>
-            <i class="icon-calendar green"></i>
-        </span>
-        <span class="input-icon input-icon-right">
-            <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()" placeholder="申请日期..."/>
-            <i class="icon-calendar green"></i>
-        </span>
-        <button id="search"
-                style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
-                class="btn btn-minier btn-primary">
-            查询
-        </button>
-    </div>
-</div>
+
 
 <div class="row">
+    <div class="col-xs-12">
+        <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
+        <span class="input-icon input-icon-right">
+            <input class="date" id="date-from" type="text" style="width: 186px" onclick="showTime()"
+                   placeholder="申请日期..."/>
+            <i class="icon-calendar green"></i>
+        </span>
+        <span class="input-icon input-icon-right">
+            <input class="date" id="date-to" type="text" style="width: 186px" onclick="showTime()"
+                   placeholder="申请日期..."/>
+            <i class="icon-calendar green"></i>
+        </span>
+            <button id="search"
+                    style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
+                    class="btn btn-minier btn-primary">
+                查询
+            </button>
+        </div>
+    </div>
     <div class="col-xs-12">
         <div class="col-xs-9">
             <div class="widget-box">
