--- a/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_history.vm
@@ -36,8 +36,6 @@
             </button>
         </div>
     </div>
-</div>
-<div class="row">
     <div class="col-xs-12">
         <div class="col-xs-9">
             <div class="widget-box">
@@ -62,9 +60,8 @@
             </div>
         </div>
     </div>
-
-
 </div>
+
 <div id="dialog-confirm" class="hide">
     <form class="form-horizontal">
         <div id="edit-form">
@@ -160,8 +157,6 @@
 //                vars["userId"] = "zhenqing.wang";
                 var params = {};
                 params["vars"] = vars;
-                params["tableMap"] = {};
-                params["flag"] = "";
                 $.ajax({
                     "contentType": "application/json; charset=utf-8",
                     "type": "POST",
@@ -228,16 +223,12 @@
     function showTableInfo(data) {
         var aaData = [];
         var needData = data.tableInfos;
-        var tableMapList = data.tableMapList;
-        var varsList = data.varsList;
         var d_len = needData.length;
         for (var i = 0; i < d_len; i++) {
             var money = parseFloat(needData[i][5]);
             money /= 100;
-            var tempMap = JSON.stringify(tableMapList[i]);
-            var tempVar = JSON.stringify(varsList[i]);
             var map = $.parseStr("<a href='javascript:void(0);' " +
-            "onclick='showEditDialog(%s,%s);'><i class='icon-link'></i></a>", tempMap, tempVar);
+            "onclick='showEditDialog(%s,%s);'><i class='icon-link'></i></a>", needData[i][0]);
             aaData.push([needData[i][0], needData[i][1], needData[i][2], needData[i][3], needData[i][4], money.toFixed(2), map]);
         }
         return aaData;
