--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -323,13 +323,13 @@
 <script language=JavaScript>
 
 
-
     jQuery(function ($) {
         var url = location.search;
         if (url.indexOf('formId') != -1) {
-            createEditApplyTable();
-            var table = document.getElementById('table1');
-            table.deleteRow(1);
+            var formId = url.split('=')[1];
+            console.log(formId);
+//            formId = decodeURIComponent(formId);
+            createEditApplyTable(formId);
         } else {
             createNewAddApplyTable();
 
@@ -349,7 +349,7 @@
         });
     }
 
-//  新建表
+    //  新建表
     function createNewAddApplyTable() {
         $.ajax({
             contentType: "application/json; charset=utf-8",
@@ -382,33 +382,27 @@
         });
     }
 
+
     function createEditApplyTable(formId) {
-        var vars = {};
-        vars["formId"] = formId;
-        var params = {};
-        params["vars"] = vars;
-        params["tableMap"] = {};
-        params["flag"] = "";
+        var params = {
+            "vars": {
+                "formId": formId
+            }
+        };
         $.ajax({
             contentType: "application/json; charset=utf-8",
             dataType: 'json',
-            url: "oa/edit_apply",
+            url: "oa/apply_info",
             type: "POST",
             data: JSON.stringify(params),
             success: function (resp) {
                 if (resp.errorCode == 0) {
                     var data = resp.data;
-                    var table = document.getElementById("table");
-                    var k = 0;
-                    for (var i = 0; i < 2; i++) {
-                        for (var j = 1; j < 6; j += 2) {
-                            if (k >= 5) {
-                                break;
-                            }
-                            table.rows[i].cells[j].childNodes[0].value = data[k];
-                            k++;
-                        }
-                    }
+                    var tableMap = data.tableMap;
+                    var vars = data.vars;
+                    console.log(data);
+                    getDataToEditDialog(tableMap, vars);
+
                 } else {
                     showCommonNoticeDialog('失败', 'icon-warning-sign',
                             generateNoticeMsg(resp.errorMessage), 300);
@@ -422,12 +416,82 @@
     }
 
 
+    function constructTable0Info(tableMap) {
+        var table0 = tableMap["table"];
+        var table = document.getElementById("table");
+        var k = 0;
+        for (var i = 0; i < 4; i++) {
+            for (var j = 1; j < 6; j += 2) {
+                var value = table0[0][k];
+                if (isNull(value)) {
+                    value = "";
+                }
+                table.rows[i].cells[j].childNodes[0].value = value;
+                k++;
+            }
+        }
+
+    }
+    function constructAllTableInfo(tableMap) {
+        var len = 6;
+        for (var i = 1; i < len; i++) {
+            var tableId = "table" + i;
+            var table = document.getElementById(tableId);
+            var tableInfo = tableMap[tableId];
+            var tableLen = tableInfo.length;
+            if (tableLen == 0) { //没有数据,不处理了.
+                continue;
+            }
+//          增加内容
+            var rowLen = table.rows.length;
+            var coLen = table.rows[0].cells.length;
+            for (var j = 0; j < tableLen; j++) {
+                var nRow = table.insertRow(rowLen);
+
+                for (var k = 0; k < coLen - 1; k++) {
+                    var value = tableInfo[j][k];
+                    if (isNull(value)) {
+                        value = "";
+                    }
+                    var cell = nRow.insertCell(k);
+                    cell.innerHTML = table.rows[rowLen - 1].cells[k].innerHTML;
+                    if(k == 0){
+                        console.log(cell.childNodes[0].childNodes);
+                        cell.childNodes[0].childNodes[1].value = value;
+                    }else{
+                        cell.childNodes[0].value = value;
+                    }
+                }
+                cell = nRow.insertCell(coLen - 1);
+                cell.innerHTML = "<div align='center' style='width:40px'><a href='javascript:;' " +
+                "onclick=\"deleteRow('" + tableId + "',this)\">删除</a></div>";
+                rowLen += 1;
+            }
+            table.deleteRow(1);//删掉第一行.
+        }
+    }
+    function getDataToEditDialog(tableMap, vars) {
+
+        constructTable0Info(tableMap);
+        constructAllTableInfo(tableMap)
+        for(var i = 1; i < 7; i++){
+            var sumOne = "sum"+i;
+            var sum = vars[sumOne];
+            $("#"+sumOne).val(sum);
+        }
+        $("#sum").val(vars["sum"]);
+        $("#remark").val(vars["remark"]);
+
+    }
+
     function workHour(tableId, curRow) {
         var table = document.getElementById(tableId);
         var rowId = curRow.parentNode.parentNode.parentNode.rowIndex;
         var dateTime = table.rows[rowId].cells[0].childNodes[0].childNodes[1].value;
         var params = {
-            "whichDay": dateTime
+            "vars": {
+                "day": dateTime
+            }
         };
         $.ajax({
             contentType: "application/json; charset=utf-8",
@@ -473,6 +537,12 @@
     //删除指定行
     function deleteRow(tableId, curRow) {
         var table = document.getElementById(tableId);
+        var rowLen = table.rows.length;
+        if(rowLen == 2){
+            showCommonNoticeDialog('失败', 'icon-warning-sign',
+                    generateNoticeMsg("啊哦,就剩一行了,不能删除了!"), 300);
+            return;
+        }
         var rowId = curRow.parentNode.parentNode.parentNode.rowIndex;
         table.deleteRow(rowId);
         addMoney(tableId);
@@ -491,7 +561,7 @@
             var rowLen = table.rows.length;
             var coLen = table.rows[0].cells.length;
             var tableSum = 0;
-            for (var i = 1; i < rowLen; i++) {
+            for (i = 1; i < rowLen; i++) {
                 var innerSum = '';
                 if (tableId == "table2") {
                     innerSum = table.rows[i].cells[coLen - 4].childNodes[0].value;
@@ -617,7 +687,6 @@
                 if (resp.errorCode == 0) {
                     showCommonNoticeDialog('成功', 'icon-warning-sign',
                             generateNoticeMsg("创建报销申请成功！"), 300);
-                    console.log();
                     window.location.href = '/oaengine/oa/apply_todo.html';
                 } else {
                     showCommonNoticeDialog('失败', 'icon-warning-sign',
