我的申请增加删除和撤销动作

--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -495,7 +495,7 @@
         };
         $.ajax({
             contentType: "application/json; charset=utf-8",
-            url: "oa/laborhour",
+            url: "oa/labor",
             type: "POST",
             data: JSON.stringify(params),
             success: function (resp) {
