--- a/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_history.vm
@@ -89,10 +89,177 @@
 
     jQuery(function ($) {
         window.edit_form = $("#edit-form").html();
-        showInfo("oa/history", "apply_history", "history-apply-details-list", "审批完成", 2);
+        showApplyHistoryInfo("oa/history", "apply_history", "history-apply-details-list", "审批完成", 2);
     });
     function showTime() {
         WdatePicker({dateFmt: 'yyyy-MM-dd HH:mm:ss'});
     }
+
+    //显示表格数据
+    function showApplyHistoryInfo(url, tableName, rTableId, status, num) {
+        var ex = document.getElementById(tableName);
+        if ($.fn.dataTable.fnIsDataTable(ex)) {
+            $(ex).dataTable().fnDestroy();
+        }
+
+        var aoColumns1 = [
+            {
+                "sTitle": '<lable><input id="current-approve-table-select-all" ' +
+                'type="checkbox" value="ALL" class="ace"><span class="lbl"></span></label>',
+                "bSortable": false, "sClass": "center"
+            }
+        ];
+        var aoColumns2 = [{
+            "sTitle": "ID",
+            "sWidth": 100,
+            "sClass": "center",
+            "bVisible": false
+        }, {
+            "sTitle": "员工编号",
+            "sWidth": 150,
+            "sClass": "center"
+        }, {
+            "sTitle": "部门",
+            "sWidth": 300,
+            "sClass": "center"
+        }, {
+            "sTitle": "姓名",
+            "sWidth": 150,
+            "sClass": "center"
+        }, {
+            "sTitle": "申请日期",
+            "sWidth": 200,
+            "sClass": "center"
+        }, {
+            "sTitle": "报销金额",
+            "sWidth": 150,
+            "sClass": "center"
+        }, {
+            "sTitle": "报销详情",
+            "sWidth": 150,
+            "sClass": "center"
+        }, {
+            "sTitle": "动作",
+            "sWidth": 200,
+            "sClass": "center"
+        }];
+        var aoColumns = aoColumns2;
+        if (num == 1) {
+            aoColumns = aoColumns1.concat(aoColumns2);
+        }
+        var wh = $(window).height();
+        var sY = (wh - 100) + 'px';
+        var oTable = $(ex).dataTable({
+            "bFilter": false,
+            "bAutoWidth": true,
+            "bProcessing": false,
+            "bServerSide": true,
+            "sDom": 't<"row"<"col-sm-12"i>>',
+            "bSort": false,
+            "bScrollCollapse": true,
+            "iDisplayLength": 20,
+            "iDisplayStart": 0,
+            "aoColumns": aoColumns,
+            "sAjaxSource": "",
+            "bScrollInfinite": true,
+            "sScrollY": sY,
+            "fnServerData": function (sSource, aDataSet, fnCallback) {
+                var startDate = $.trim($('#date-from').val());
+                var endDate = $.trim($('#date-to').val());
+                var start = 0;
+                var length = 0;
+                for (var i = 0; i < aDataSet.length; i++) {
+                    if (aDataSet[i].name == 'iDisplayStart') {
+                        start = aDataSet[i].value;
+                    }
+                    if (aDataSet[i].name == 'iDisplayLength') {
+                        length = aDataSet[i].value;
+                    }
+                }
+                var vars = {};
+                vars["start"] = start;
+                vars["length"] = length;
+                if (startDate != '') {
+                    vars["startTime"] = startDate;
+                }
+                if (endDate != '') {
+                    vars["endTime"] = endDate;
+                }
+                var params = {"vars": vars};
+                $.ajax({
+                    "contentType": "application/json; charset=utf-8",
+                    "type": "POST",
+                    "url": url,
+                    "data": JSON.stringify(params),
+                    "success": function (resp) {
+                        if (resp.errorCode == 0) {
+                            var data = resp.data;
+                            var iTotalRecords = data.count || 0;
+                            var iTotalDisplayRecords = iTotalRecords;
+                            var aaData = constructHistoryTableInfo(data, num);
+                            data = {
+                                "aaData": aaData,
+                                "iTotalRecords": (iTotalRecords || 0),
+                                "iTotalDisplayRecords": (iTotalDisplayRecords || 0)
+                            };
+                            fnCallback(data);
+                        } else {
+                            showCommonNoticeDialog('失败', 'icon-warning-sign',
+                                    generateNoticeMsg(resp.errorMessage), 300);
+                        }
+                    },
+                    error: function () {
+                        showCommonNoticeDialog('网络错误', 'icon-bolt', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+                    }
+                });
+            },
+            "fnDrawCallback": function () {
+                if (!oTable) {
+                    return;
+                }
+
+                $("#search").unbind("click");
+                $("#search").on("click", function (e) {
+                    showInfo(url, tableName, rTableId, status);
+                }).on("dblclick", function (e) {
+                    e.preventDefault();
+                });
+                oTable.$('tr.row_selected').removeClass('row_selected');
+                oTable.$("tr").unbind('click');
+                oTable.$("tr").click({
+                    oTable: oTable
+                }, function (e) {
+                    if ($(this).hasClass('row_selected')) {
+                        $(this).removeClass('row_selected');
+                    }
+                    else {
+                        e.data.oTable.$('tr.row_selected').removeClass('row_selected');
+                        $(this).addClass('row_selected');
+                        var id = e.data.oTable.fnGetData(this)[0];
+                        showApplyTodoOrHistoryDetailsList(id, rTableId, status);
+                    }
+                });
+            }
+        })
+    }
+
+    function constructHistoryTableInfo(data, num) {
+        var aaData = [];
+        var needData = data.tableInfos;
+        var d_len = needData.length;
+        for (var i = 0; i < d_len; i++) {
+            var money = parseFloat(needData[i][5]);
+            money /= 100;
+            var map = $.parseStr("<a href='javascript:void(0);' " +
+            "onclick='showEditDialog(%s);'><i class='icon-link'></i></a>", needData[i][0]);
+
+            var push = '<a href="javascript:void(0);" role="button" ' +
+                    'onclick="restartForm(\'' + needData[i][0] + '\')" class="green"><i class="icon-user">重新发起</i></a>';
+            aaData.push([needData[i][0], needData[i][1],
+                needData[i][2], needData[i][3], needData[i][4], money.toFixed(2), map, push]);
+        }
+        return aaData;
+    }
+
 
 </script>
