--- a/src/main/webapp/WEB-INF/vm/oa/draft.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/draft.vm
@@ -15,19 +15,36 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="widget-box">
-            <div class="widget-header header-color-blue" style="">
-                <h5 class="bigger lighter"><i class="icon-time"></i>草稿列表</h5>
+        <div class="col-xs-5">
+            <div class="form-group dash-button-group" style="margin-bottom: 0px; float: left;">
+                <button id="draft_edit"
+                        style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
+                        class="btn btn-minier btn-primary">
+                    编辑
+                </button>
+                <button id="draft_del"
+                        style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
+                        class="btn btn-minier btn-primary">
+                    删除
+                </button>
             </div>
-            <div class="widget-body">
-                <table id="draft"
-                       class="table table-striped table-bordered table-hover"></table>
+        </div>
+    </div>
+    <div class="col-xs-12">
+        <div class="col-xs-9">
+            <div class="widget-box">
+                <div class="widget-header header-color-blue" style="">
+                    <h5 class="bigger lighter"><i class="icon-time"></i>草稿列表</h5>
+                </div>
+                <div class="widget-body">
+                    <table id="draft"
+                           class="table table-striped table-bordered table-hover"></table>
+                </div>
             </div>
         </div>
 
     </div>
 </div>
-
 <div id="dialog-confirm" class="hide">
     <form class="form-horizontal">
         <div id="edit-form">
@@ -38,6 +55,9 @@
 </div>
 
 <div id="common-notice-dialog" class="hide"></div>
+<div id="draft-result-dialog" class="hide"></div>
+<div id="del-msg-dialog" class="hide"></div>
+<div id="back-msg-dialog" class="hide"></div>
 
 <script src="static/js/utils.js">
 </script>
@@ -66,36 +86,41 @@
         if ($.fn.dataTable.fnIsDataTable(ex)) {
             $(ex).dataTable().fnDestroy();
         }
-        var aoColumns = [{
-            "sTitle": "ID",
-            "sWidth": 100,
-            "sClass": "center",
-            "bVisible": false
-        }, {
-            "sTitle": "员工编号",
-            "sWidth": 150,
-            "sClass": "center"
-        }, {
-            "sTitle": "部门",
-            "sWidth": 300,
-            "sClass": "center"
-        }, {
-            "sTitle": "姓名",
-            "sWidth": 150,
-            "sClass": "center"
-        }, {
-            "sTitle": "申请日期",
-            "sWidth": 200,
-            "sClass": "center"
-        }, {
-            "sTitle": "报销金额",
-            "sWidth": 150,
-            "sClass": "center"
-        }, {
-            "sTitle": "编辑",
-            "sWidth": 150,
-            "sClass": "center"
-        }];
+        var aoColumns = [
+            {
+                "sTitle": '<lable><input id="current-checkbox-select-all" ' +
+                'type="checkbox" value="ALL" class="ace"><span class="lbl"></span></label>',
+                "bSortable": false, "sWidth": 100, "sClass": "center"
+            }, {
+                "sTitle": "ID",
+                "sWidth": 100,
+                "sClass": "center",
+                "bVisible": true
+            }, {
+                "sTitle": "员工编号",
+                "sWidth": 150,
+                "sClass": "center"
+            }, {
+                "sTitle": "部门",
+                "sWidth": 300,
+                "sClass": "center"
+            }, {
+                "sTitle": "姓名",
+                "sWidth": 150,
+                "sClass": "center"
+            }, {
+                "sTitle": "申请日期",
+                "sWidth": 200,
+                "sClass": "center"
+            }, {
+                "sTitle": "报销金额",
+                "sWidth": 150,
+                "sClass": "center"
+            }, {
+                "sTitle": "报销详情",
+                "sWidth": 150,
+                "sClass": "center"
+            }];
         var wh = $(window).height();
         var sY = (wh - 100) + 'px';
         var oTable = $(ex).dataTable({
@@ -159,13 +184,19 @@
                 if (!oTable) {
                     return;
                 }
-
-                $("#search").unbind("click");
-                $("#search").on("click", function (e) {
-                    showInfo(url, tableName, rTableId, status);
+                $("#draft_edit").unbind("click");
+                $("#draft_edit").on("click", function (e) {
+                    draftEdit(oTable, 1);
                 }).on("dblclick", function (e) {
                     e.preventDefault();
                 });
+                $("#draft_del").unbind("click");
+                $("#draft_del").on("click", function (e) {
+                    draftDel(oTable, 2);
+                }).on("dblclick", function (e) {
+                    e.preventDefault();
+                });
+
                 oTable.$('tr.row_selected').removeClass('row_selected');
                 oTable.$("tr").unbind('click');
                 oTable.$("tr").click({
@@ -177,10 +208,15 @@
                     else {
                         e.data.oTable.$('tr.row_selected').removeClass('row_selected');
                         $(this).addClass('row_selected');
-                        var id = e.data.oTable.fnGetData(this)[0];
+                        var id = e.data.oTable.fnGetData(this)[1];
 //                        showApplyTodoOrHistoryDetailsList(id, rTableId, status);
                     }
                 });
+            },
+            fnInitComplete: function () {
+                $('#current-checkbox-select-all').prop('checked', false);
+                $('#current-checkbox-select-all').attr('checked', false);
+                toggleCheck(oTable);
             }
         })
     }
@@ -193,20 +229,156 @@
             var money = parseFloat(needData[i][5]);
             money /= 100;
             var map = $.parseStr("<a href='javascript:void(0);' " +
-            "onclick='skipEditDraftInfo(%s);'><i class='icon-link'></i></a>", needData[i][0]);
-
-            var push = "";
-
-            aaData.push([needData[i][0], needData[i][1],
+            "onclick='showEditDialog(%s);'><i class='icon-link'></i></a>", needData[i][0]);
+            var checkbox = '<label><input value="" type="checkbox" class="ace"> <span class="lbl"></span></label>';
+            aaData.push([checkbox, needData[i][0], needData[i][1],
                 needData[i][2], needData[i][3], needData[i][4], money.toFixed(2), map]);
 
         }
         return aaData;
     }
 
-    function skipEditDraftInfo(formId){
+    function draftDel(oTable, num) {
+        console.log("删除");
+        var operStr = "删除";
+        var msg = "该操作不能恢复,是否进行删除操作?";
+        var title = "删除操作";
+        var formIds = "";
+        $("input:checked", oTable.fnGetNodes()).each(function () {
+            var row = $(this).parent().parent().parent();
+            var nTds = $('td', row);
+            var formId = nTds[1].childNodes[0].data;
+            formIds += formId + ",";
+        });
+        console.log(formIds);
+        if (formIds.length < 1) {
+            showResultDialog("back-msg-dialog", operStr, 'icon-lightbulb',
+                    generateNoticeMsg("请选择要" + operStr + "的条目!"), 300);
+            return;
+        }
+        try {
+            $("#back-msg-dialog").empty();
+            $("#back-msg-dialog").append(generateNoticeMsg(msg));
+            var title_html = $.parseStr('<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold">' +
+            '<li class="icon-user"></li> %s</div>', title);
+            var dialog = $("#back-msg-dialog").removeClass('hide').dialog({
+                modal: true,
+                width: 300,
+                title: title_html,
+                title_html: true,
+                closeOnEscape: false,
+                open: function (event, ui) {
+                    $(".ui-dialog-titlebar-close").hide();
+                },
+                buttons: [
+                    {
+                        id: "draft-msg-submit",
+                        text: "提交",
+                        "class": "btn btn-primary btn-xs",
+                        click: function (e) {
+                            draftDelDataToDB(formIds, operStr);
+                            $(this).dialog("close");
+                        }
+                    },
+                    {
+                        id: "draft-msg-cancel",
+                        text: "取消",
+                        "class": "btn btn-xs",
+                        click: function () {
+                            $(this).dialog("close");
+                        }
+                    }
+                ]
+            });
+        } catch (e) {
+            showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                    generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+        }
+
+    }
+
+    function draftEdit(oTable, formId) {
+        var operStr = "编辑";
+        var formIds = "";
+        $("input:checked", oTable.fnGetNodes()).each(function () {
+            var row = $(this).parent().parent().parent();
+            var nTds = $('td', row);
+            var formId = nTds[1].childNodes[0].data;
+            formIds += formId + ",";
+        });
+        var len = formIds.length;
+        if (len < 1) {
+            showResultDialog("draft-result-dialog", operStr, 'icon-lightbulb',
+                    generateNoticeMsg("请选择要" + operStr + "的条目!"), 300);
+            return;
+        }
+        formIds = formIds.substr(0, len - 1);
+        var formMsg = formIds.split(",");
+        var fLen = formMsg.length;
+        if (fLen > 1) {
+            showResultDialog("draft-result-dialog", operStr, 'icon-lightbulb',
+                    generateNoticeMsg("只能选择一条记录进行编辑,请检查!"), 300);
+            return;
+        }
+        var formId = formMsg[0];
 //        window.location.href="/apply.html?formId=encodeURIComponent("+formId+")";
-        window.location.href="oa/apply.html?formId="+formId;
+        window.location.href = "oa/apply.html?formId=" + formId;
+    }
+
+    function draftDelDataToDB(formIds, action) {
+        var id = "draft-result-dialog";
+        var params = {};
+        var vars = {};
+        vars["formIds"] = formIds;
+        params["vars"] = vars;
+        $.ajax({
+            contentType: "application/json; charset=utf-8",
+            url: "back_del",
+            type: "post",
+            data: JSON.stringify(params),
+            success: function (resp) {
+                var title_html_str = '';
+                try {
+                    if (resp.errorCode == 0) {
+                        title_html_str = '<div class="dialog_title"><li class="icon-info-sign"></li> 审批' + action + '</div>';
+                        var succeed_html = '<b><li class="icon-check"></li> ' + action + '成功</b><br/>';
+                        $("#" + id).append(generateNoticeMsg(succeed_html));
+                    } else {
+                        title_html_str = '<div class="dialog_title"><li class="icon-exclamation-sign"></li>审批' + action + '</div>';
+                        $("#" + id).append(generateNoticeMsg(resp.errorMessage));
+                    }
+                } catch (e) {
+                }
+                var dialog = $("#" + id).removeClass('hide').dialog({
+                    modal: true,
+                    width: 400,
+                    resizable: true,
+                    title: title_html_str,
+                    title_html: true,
+                    closeOnEscape: false,
+                    buttons: [
+                        {
+                            text: "确定",
+                            "class": "btn btn-primary btn-xs",
+                            click: function () {
+                                $("#" + id).empty();
+                                $("#" + id).dialog('destroy');
+                            }
+                        }
+                    ],
+                    close: function () {
+                        $("#" + id).empty();
+                        $("#" + id).dialog('destroy');
+                    }
+                });
+                showDraftInfo("oa/draft", "draft");
+            },
+            "error": function (jqxhr, textstatus, errorthrown) {
+                enableCurrentApproveToolbarButton(true);
+                showResultDialog('网络错误', 'icon-warning-sign',
+                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
+        });
     }
 
 
